--- a/day1.html
+++ b/day1.html
@@ -11,6 +11,11 @@
     <p> State riddle here. </p>
     <p> </p>
     <p> </p>
+    <p>
+        <label>Answer</label>
+        <input type = "password"
+                id = "myPwd"
+                value = "secret" />
     <p> </p>
     <p>Remeber to send the answer to Nat, Devi, or Cyn</p>
     
