--- a/day1.html
+++ b/day1.html
@@ -11,11 +11,15 @@
     <p> State riddle here. </p>
     <p> </p>
     <p> </p>
+    <form>
+      <fieldset>
     <p>
         <label>Answer</label>
         <input type = "password"
                 id = "myPwd"
                 value = "secret" />
+        </fieldset>
+    </form>
     <p> </p>
     <p>Remeber to send the answer to Nat, Devi, or Cyn</p>
     
