--- a/day1.html
+++ b/day1.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body>
+<body style ="background-color:purple">
     <h3>Riddle 1</h3>
     <p> State riddle here. </p>
     <p> </p>
@@ -16,7 +16,7 @@
     <p>
         <label>Answer</label>
         <input type = "password"
-                id = "myPwd"
+                id = "pwd"
                 value = "secret" />
         </fieldset>
     </form>
