--- a/day1.html
+++ b/day1.html
@@ -6,7 +6,7 @@
 
 </head>
 
-<body style ="background-color:purple">
+<body style ="background-color:#e8daef">
     <h3>Riddle 1</h3>
     <p> State riddle here. </p>
     <p> </p>
