--- a/day1.html
+++ b/day1.html
@@ -14,10 +14,11 @@
     <form>
       <fieldset>
     <p>
-        <label>Answer</label>
-        <input type = "password"
-                id = "pwd"
-                value = "secret" />
+        <form action="https://bangtanmvp.github.io/BTSxMVPgames/page2.html">
+    <input type="submit" value="Enter answer here" />
+</form>
+          </p>
+     <p> Password will be all lowercase, no space </p>
         </fieldset>
     </form>
     <p> </p>
