--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,68 @@
+<html>
+<script language="JavaScript">
+<!--hide
+var password;
+var pass1="seokjin"
+password=prompt('Enter your answer below to view the next part, if it is wrong it will lead you back to the previous page',' ');
+if (password==pass1)
+alert('Correct answer, click ok to enter.');
+else
+{
+window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
+}
+//-->
+  </script>
 
+<head>
+
+
+
+    <meta content='width=device-width, initial-scale=1' name='viewport'/>
+
+
+
+</head>
+
+
+
+<body style ="background-color:#e8daef">
+
+    <h3>Riddle 1: Part 2</h3>
+
+    <p> State riddle here. </p>
+
+    <p> </p>
+
+    <p> </p>
+
+    <form>
+
+      <fieldset>
+
+    <p>
+
+        <form action="https://bangtanmvp.github.io/BTSxMVPgames/page2.html">
+
+    <input type="submit" value="Enter answer here" />
+
+</form>
+
+          </p>
+
+     <p> Password will be all lowercase, no space </p>
+
+        </fieldset>
+
+    </form>
+
+    <p> </p>
+
+    <p>Remeber to send the answer to Nat, Devi, or Cyn</p>
+
+    
+
+    </body>
+
+
+
+</html>
