--- a/day1.html
+++ b/day1.html
@@ -14,8 +14,9 @@
     <form>
       <fieldset>
     <p>
-        <form action="https://bangtanmvp.github.io/BTSxMVPgames/page2.html">
-    <input type="submit" value="Enter answer here" />
+        <button onclick="https://bangtanmvp.github.io/BTSxMVPgames/page2.html';">
+      Enter Answer Here
+    </button>
 </form>
           </p>
      <p> Password will be all lowercase, no space </p>
