--- a/page2.html
+++ b/page2.html
@@ -25,11 +25,11 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
 
 
-<body style ="background-color:#e8daef">
+<body style ="background-color:#ebefda">
 
     <h3>Riddle 1: Part 2</h3>
 
-    <p> State riddle here. </p>
+    <p> Congrats on getting the right answers! Here's the next part of this riddle, can you guess it? </p>
 
     <p> </p>
 
@@ -41,7 +41,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <p>
 
-        <form action="https://bangtanmvp.github.io/BTSxMVPgames/page2.html">
+        <form action="https://bangtanmvp.github.io/BTSxMVPgames/script3.html">
 
     <input type="submit" value="Enter answer here" />
 
@@ -49,7 +49,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
           </p>
 
-     <p> Password will be all lowercase, no space </p>
+     <p> Password will be all lowercase, space </p>
 
         </fieldset>
 
@@ -57,7 +57,8 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <p> </p>
 
-    <p>Remeber to send the answer to Nat, Devi, or Cyn</p>
+    <p>You're welcome to go into main chat for some hints...be careful if they're tricks hehe</p>
+    <p>If you think you got the right answer but it's not working, feel free to tag @Nat @Cyn @Devi for help in main chat</p>
 
     
 
