--- a/day1.html
+++ b/day1.html
@@ -19,11 +19,13 @@
     </button>
 </form>
           </p>
-     <p> Password will be all lowercase, no space </p>
+     <p> Password will be all lowercase</p>
         </fieldset>
     </form>
     <p> </p>
-    <p>Remeber to send the answer to Nat, Devi, or Cyn</p>
+    <p>You're welcome to go into main chat for some hints...be careful if they're tricks hehe</p>
+    <p>If you think you got the right answer but it's not working, feel free to tag @Nat @Cyn @Devi for help in main chat</p>
+
     
     </body>
 
