--- a/day1.html
+++ b/day1.html
@@ -14,7 +14,7 @@
     <form>
       <fieldset>
     <p>
-        <button onclick="window.location.href='https://bangtanmvp.github.io/BTSxMVPgames/page2.html';">
+        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/page2.html";>
       Enter Answer Here
     </button>
 </form>
