--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <!--hide
 var password;
 var pass1="seokjin"
-password=prompt('Enter your answer below to view the next part, if it is wrong it will lead you back to the previous page',' ');
+password=prompt('Enter your answer below to view the next part',' ');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
 else
