--- a/day1.html
+++ b/day1.html
@@ -18,6 +18,7 @@
     </button>
           </p>
      <p> Password will be all lowercase</p>
+          <p> Wrong passwords will take you back to this page</p>
         </fieldset>
     </form>
     <p> </p>
