--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <!--hide
 var password;
 var pass1="seokjin"
-password=prompt('Enter your answer below to view the next part',' ');
+password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
 else
@@ -35,17 +35,23 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <p> </p>
 
-    <form>
-
-      <fieldset>
+    <fieldset>
 
     <p>
 
-        <form action="https://bangtanmvp.github.io/BTSxMVPgames/script3.html">
+        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/script3.html";>
 
-    <input type="submit" value="Enter answer here" />
+      Enter Answer Here
 
-</form>
+    </button>
+
+          </p>
+
+     <p> Password will be all lowercase</p>
+
+          <p> Wrong passwords will take you back to this page</p>
+
+        </fieldset>
 
           </p>
 
