--- a/day1.html
+++ b/day1.html
@@ -17,8 +17,8 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Password will be all lowercase</p>
-          <p> Wrong passwords will take you back to this page</p>
+     <p> Answer will be all lowercase</p>
+          <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
     <p>You're welcome to go into main chat for some hints...be careful if they're tricks hehe</p>
