--- a/page2.html
+++ b/page2.html
@@ -15,15 +15,9 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
 <head>
 
-
-
     <meta content='width=device-width, initial-scale=1' name='viewport'/>
 
-
-
 </head>
-
-
 
 <body style ="background-color:#ebefda">
 
@@ -47,19 +41,13 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
           </p>
 
-     <p> Password will be all lowercase</p>
+     <p> Answers will be all lowercase</p>
 
-          <p> Wrong passwords will take you back to this page</p>
+          <p> Wrong answers will take you back to this page</p>
 
         </fieldset>
 
           </p>
-
-     <p> Password will be all lowercase, space </p>
-
-        </fieldset>
-
-    </form>
 
     <p> </p>
 
