--- a/day1.html
+++ b/day1.html
@@ -8,7 +8,10 @@
 
 <body style ="background-color:#e8daef">
     <h3>Riddle 1</h3>
-    <p> State riddle here. </p>
+    <p> The answer you seek is the name of this song </p>
+    <p> It's about the journey I've taken to find where I belong </p>
+    <p> My story is hidden along the desert and ocean </p>
+    <p> You're seeking the tale that set BTS in motion </p>
     <p> </p>
     <p> </p>
       <fieldset>
@@ -17,8 +20,9 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase</p>
-          <p> Wrong answers will take you back to this page</p>
+     <p> Answer will be all lowercase and includes space</p>
+          <p> Include the ENTIRE title </p>
+     <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
     <p>You're welcome to go into main chat for some hints...be careful if they're tricks hehe</p>
