--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="seokjin"
+var pass1="skit: on the starting line"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
@@ -23,7 +23,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <h3>Riddle 1: Part 2</h3>
 
-    <p> Congrats on getting the right answers! Here's the next part of this riddle, can you guess it? </p>
+    <p> Congrats on getting the right answers! For this answer you'll need to identify which  </p>
 
     <p> </p>
 
