--- a/page1.html
+++ b/page1.html
@@ -23,8 +23,11 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <h3>Riddle 1: Part 2</h3>
 
-    <p> Congrats on getting the right answers! For this answer you'll need to identify which  </p>
+    <p> Congrats on getting the right answers!</p>
 
+  <p> Your next task is to identify which MV this picture comes from </p>
+  <p> <img>https://bangtanmvp.github.io/BTSxMVPgames/mv.png</img></p>
+<p> But be careful I am searching for the whole title, and not just the common one &#x1F61C </p>
     <p> </p>
 
     <p> </p>
