--- a/page1.html
+++ b/page1.html
@@ -26,7 +26,8 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
     <p> Congrats on getting the right answers!</p>
 
   <p> Your next task is to identify which MV this picture comes from </p>
-  <p> <img>https://bangtanmvp.github.io/BTSxMVPgames/mv.png</img></p>
+  <p> <img src="https://bangtanmvp.github.io/BTSxMVPgames/mv.PNG" alt="MV" width="200"
+         height="80"> </p>
 <p> But be careful I am searching for the whole title, and not just the common one &#x1F61C </p>
     <p> </p>
 
