--- a/page1.html
+++ b/page1.html
@@ -28,7 +28,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
   <p> Your next task is to identify which MV this picture comes from </p>
   <p> <img src="https://bangtanmvp.github.io/BTSxMVPgames/mv.PNG" alt="MV" width="412"
          height="216"> </p>
-<p> But be careful I am searching for the whole title, and not just the common one &#x1F61C </p>
+<p> But be careful I am searching for the whole title, and not just the common name &#x1F61C </p>
     <p> </p>
 
     <p> </p>
@@ -37,7 +37,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
     <p>
 
-        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/script3.html";>
+        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/script1.html";>
 
       Enter Answer Here
 
