Update and rename script3.html to script1.html

--- a/script1.html
+++ b/script1.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="namjoon"
+var pass1="no offense"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
@@ -21,12 +21,12 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/page2.html";
 
     <h3>Riddle 1: Part 3</h3>
 
-    <p> Congrats on getting the right answers for Day! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 1! Here's the first piece of the puzzle </p>
 
     <p> </p>
     <p> </p>
     
-<p style="font-size:54px"> Bangtan </p>
+<p style="font-size:54px"> Purple </p>
    
     </body>
 
