--- a/script1.html
+++ b/script1.html
@@ -22,6 +22,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/page2.html";
     <h3>Riddle 1: Part 3</h3>
 
     <p> Congrats on getting the right answers for Day 1! Here's the first piece of the puzzle </p>
+    <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
     <p> </p>
