--- a/script1.html
+++ b/script1.html
@@ -20,7 +20,10 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/page2.html";
 <body style ="background-color:#7cecf9">
 
     <h3>Riddle 1: Part 3</h3>
+  <p> Full scale answer :D </p>
+  <p> <img src="https://bangtanmvp.github.io/BTSxMVPgames/mvanswer.PNG" alt="MV" width="1318"
 
+         height="718"> </p>
     <p> Congrats on getting the right answers for Day 1! Here's the first piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
