--- a/candy2.html
+++ b/candy2.html
@@ -6,9 +6,12 @@
 
 </head>
 
-<body style ="background-color:#e8daef">
-    <h3>Riddle 1</h3>
-    <p> State riddle here. </p>
+<body style ="background-color:#80f97c">
+    <h3>Riddle 2</h3>
+    <p> This story is told in covers of yellow and green </p>
+    <p> Bringing along the journey of where BTS has been </p>
+    <p> The answer you seek is the location's name </p>
+    <p> Showing how BTS, <i>now</i> and then, are the same </p>
     <p> </p>
     <p> </p>
       <fieldset>
