--- a/world2.html
+++ b/world2.html
@@ -40,8 +40,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
 
 
-<body style ="background-color:##a5ecdb">
-
+<body style ="background-color:#a5ecdb">
 
 
     <h3>Riddle 2: Part 2</h3>
@@ -57,9 +56,11 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
   <p> <strong>Note:</strong> The combined letters won't make a cohesive word </p>
 
   <p> </p>
-  <p> 💤 ⏰ &#x1F31E  </p>
-  <p> </p>
-  <p> </p>
+  <p><span style='font-size:24px;'> 🌧️☔ </span></p>
+  <p><span style='font-size:24px;'> 💤 ⏰ &#x1F31E  </span></p>
+  <p><span style='font-size:24px;'> 🤑 👪 🤕  </span></p>
+  <p><span style='font-size:24px;'> 🪑 🌹 ⏳ </span></p>
+  <p><span style='font-size:24px;'> 🧸 ❤️ ✈️  </span></p>
 
     <p> </p>
 
@@ -73,10 +74,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
 
 
-        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/script1.html";>
-
-
-
+        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/hello2.html";>
       Enter Answer Here
 
 
@@ -87,13 +85,8 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
 
           </p>
 
-
-
      <p> Answers will be all lowercase</p>
-
-
-
-          <p> Wrong answers will take you back to this page</p>
+     <p> Wrong answers will take you back to this page</p>
 
 
 
