--- a/hello2.html
+++ b/hello2.html
@@ -19,16 +19,16 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/world2.html";
 
 <body style ="background-color:#aec9f9">
 
-    <h3>Riddle 3: Part 3</h3>
+    <h3>Riddle 2: Part 3</h3>
 
-         height="718"> </p>
+      
     <p> Congrats on getting the right answers for Day 1! Here's the second piece of the puzzle </p>
-    <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
+    <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi </p>
 
     <p> </p>
     <p> </p>
     
-<p style="font-size:54px"> reason </p>
+<p style="font-size:54px"> Reason </p>
    
     </body>
 
