--- a/love3.html
+++ b/love3.html
@@ -19,7 +19,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/seokjin3.html";
 
 </head>
 
-<body style ="background-color:#ebefda">
+<body style ="background-color:#fbf2c1">
 
     <h3>Riddle 3: Part 2</h3>
 
