--- a/hope3.html
+++ b/hope3.html
@@ -19,7 +19,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/love3.html";
 
 </head>
 
-<body style ="background-color:#ebefda">
+<body style ="background-color:#fbd6c1">
 
     <h3>Riddle 3: Part 3</h3>
 
@@ -33,7 +33,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/love3.html";
 
     <p>
 
-        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/answer3.html";>
+        <button onclick=window.location="https://bangtanmvp.github.io/BTSxMVPgames/bunnies3.html";>
 
       Enter Answer Here
 
