--- a/world2.html
+++ b/world2.html
@@ -18,7 +18,7 @@ else
 
 {
 
-window.location="https://bangtanmvp.github.io/BTSxMVPgames/day1.html";
+window.location="https://bangtanmvp.github.io/BTSxMVPgames/candy2.html";
 
 }
 
