--- a/season10.html
+++ b/season10.html
@@ -26,7 +26,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/positive10.html";
     <p> </p>
     <p> </p>
     
-<p style="font-size:54px"> The </p>
+<p style="font-size:54px"> We </p>
    
     </body>
 
