--- a/bunnies3.html
+++ b/bunnies3.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/hope3.html";
 <body style ="background-color:#fbc1e0">
 
   <h3>Riddle 1: Part 3</h3>
-    <p> Congrats on getting the right answers for Day 1! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 1! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
