--- a/stars4.html
+++ b/stars4.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/namjoon4.html";
 <body style ="background-color:#f0c1fb">
 
   <h3>Riddle 4: Part 2</h3>
-    <p> Congrats on getting the right answers for Day 4! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 4! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
