--- a/read5.html
+++ b/read5.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/rhymes5.html";
 <body style ="background-color:#66c4f9">
 
   <h3>Riddle 5: Part 3</h3>
-    <p> Congrats on getting the right answers for Day 5! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 5! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
