--- a/bloom6.html
+++ b/bloom6.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/kitty6.html";
 <body style ="background-color:#8cf966">
 
   <h3>Riddle 6: Part 3</h3>
-    <p> Congrats on getting the right answers for Day 6! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 6! Here's the sixth piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
