--- a/soon7.html
+++ b/soon7.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/bts7.html";
 <body style ="background-color:#d195fe">
 
   <h3>Riddle 7: Part 2</h3>
-    <p> Congrats on getting the right answers for Day 7! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 7! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
