--- a/group8.html
+++ b/group8.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/truth8.html";
 <body style ="background-color:#95e8fe">
 
   <h3>Riddle 8: Part 3</h3>
-    <p> Congrats on getting the right answers for Day 8! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 8! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
