--- a/award9.html
+++ b/award9.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/jimin9.html";
 <body style ="background-color:#e3fe95">
 
   <h3>Riddle 9: Part 2</h3>
-    <p> Congrats on getting the right answers for Day 9! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 9! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
