--- a/season10.html
+++ b/season10.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/positive10.html";
 <body style ="background-color:#95fedb">
 
   <h3>Riddle 10: Part 3</h3>
-    <p> Congrats on getting the right answers for Day 10! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 10! Here's the tenth piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
