--- a/pencil11.html
+++ b/pencil11.html
@@ -20,7 +20,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/show11.html";
 <body style ="background-color:#7cecf9">
 
   <h3>Riddle 11: Part 4</h3>
-    <p> Congrats on getting the right answers for Day 11! Here's the first piece of the puzzle </p>
+    <p> Congrats on getting the right answers for Day 11! Here's the next piece of the puzzle </p>
     <p> Screenshot this page and send it to either @Nat, @Cynthia, or @Devi
 
     <p> </p>
