--- a/seokjin3.html
+++ b/seokjin3.html
@@ -19,7 +19,7 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase and includes space</p>
+     <p> Answer will be all lowercase and may includes space and punctuations</p>
      <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
