--- a/day1.html
+++ b/day1.html
@@ -20,7 +20,7 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase and includes space</p>
+     <p> Answer will be all lowercase and may includes space and punctuations</p>
           <p> Include the ENTIRE title </p>
      <p> Wrong answers will take you back to this page</p>
         </fieldset>
