--- a/candy2.html
+++ b/candy2.html
@@ -20,7 +20,7 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase</p>
+     <p> Answer will be all lowercase and may include space and punctuations</p>
           <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
