--- a/love3.html
+++ b/love3.html
@@ -41,7 +41,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/seokjin3.html";
 
           </p>
 
-     <p> Answers will be all lowercase</p>
+     <p> Answers will be all lowercase and may include space and punctuations</p>
 
      <p> Wrong answers will take you back to this page</p>
 
