--- a/yoongi8.html
+++ b/yoongi8.html
@@ -19,7 +19,7 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase and may include space</p>
+     <p> Answer will be all lowercase and may include space and punctuations</p>
      <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
