--- a/pencil11.html
+++ b/pencil11.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="waste it on me"
+var pass1="15:00"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
