--- a/seokjin3.html
+++ b/seokjin3.html
@@ -9,9 +9,12 @@
 <body style ="background-color:#e8daef">
     <h3>Riddle 3</h3>
     <p> </p>
-    <p> </p>
-    <p> </p>
-    <p> </p>
+    <p>My goals are higher than Seoul Tower</p>
+    <p>As I sing to ARMYs with all of my power</p>
+    <p>As the years go on by again</p>
+    <p>I hope to walk along this melody with you, my friend</p>
+    <p>Once you've discovered the song in my sight</p>
+    <p>Go to time frame 0:07 and find the date hiiden in plain sight</p>
     <p> </p>
       <fieldset>
     <p>
@@ -19,7 +22,7 @@
       Enter Answer Here
     </button>
           </p>
-     <p> Answer will be all lowercase and may includes space and punctuations</p>
+     <p> Answer will be numerical (ignore the periods on the date so it should be YYYYMMDD)</p>
      <p> Wrong answers will take you back to this page</p>
         </fieldset>
     <p> </p>
