--- a/love3.html
+++ b/love3.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="skit: on the starting line"
+var pass1="20120606"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
@@ -19,14 +19,19 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/seokjin3.html";
 
 </head>
 
-<body style ="background-color:#fbf2c1">
+<body style ="background-color:#f8ddc9">
 
     <h3>Riddle 3: Part 2</h3>
 
     <p> Congrats on getting the right answers!</p>
 
     <p> </p>
-    <p> </p>
+    <p>New challenges and adventures</p>
+<p>All it took were hip hop lectures</p>
+<p>Legends in the city of stars </p>
+<p>Ready to make them rap and dance</p>
+<p>We enjoyed 8 parts</p>
+<p>With pretty girls and a fancy car.</p>
     <p> </p>
 
     <fieldset>
