--- a/hope3.html
+++ b/hope3.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="skit: on the starting line"
+var pass1="american hustle life"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
@@ -26,8 +26,13 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/love3.html";
     <p> Congrats on getting the right answers!</p>
 
     <p> </p>
-    <p> </p>
-    <p> </p>
+    <p>A third riddle in this round you see</p>
+    <p>Don't be shy to take a peek </p>
+  <p>Especially after you've cut your hair</p>
+  <p>And walked down the deep dark stairs</p>
+  <p>You've put my heart in jeapordy</p>
+  <p>Hence I sing this song to ask if you're testing me</p>
+  <p> </p>
 
     <fieldset>
 
