--- a/seokjin3.html
+++ b/seokjin3.html
@@ -14,7 +14,7 @@
     <p>As the years go on by again</p>
     <p>I hope to walk along this melody with you, my friend</p>
     <p>Once you've discovered the song in my sight</p>
-    <p>Go to time frame 0:07 and find the date hiiden in plain sight</p>
+    <p>Go to time frame 0:07 and find the date hidden in plain sight</p>
     <p> </p>
       <fieldset>
     <p>
