--- a/positive10.html
+++ b/positive10.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="help me nat idk the answer"
+var pass1="tear"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
