--- a/rhymes5.html
+++ b/rhymes5.html
@@ -27,9 +27,9 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/jungkook5.html";
 
     <p></p>
     <p>How many differences are in the photo?</p>
-    <p> <img src="https://bangtanmvp.github.io/BTSxMVPgames/find.JPG" alt="MV" width="1650"
+    <p> <img src="https://bangtanmvp.github.io/BTSxMVPgames/find.jpg" alt="MV" width="825"
 
-         height="2550"> </p>
+         height="1275"> </p>
     <p> </p>
 
     <fieldset>
