--- a/jimin9.html
+++ b/jimin9.html
@@ -11,7 +11,7 @@
     
     <p> </p>
     <p>Breath in, breath out</p>
-    <p>History was being written down/p>
+    <p>History was being written down</p>
     <p>The first times are always a big surprise</p>
     <p>And we were shocked we won that prize</p>   
     <p>A land that wasn't our own, yet ARMY cheered</p>
