--- a/world2.html
+++ b/world2.html
@@ -59,7 +59,7 @@ window.location="https://bangtanmvp.github.io/BTSxMVPgames/candy2.html";
   <p><span style='font-size:24px;'> 🌧️☔ </span></p>
   <p><span style='font-size:24px;'> 💤 ⏰ &#x1F31E  </span></p>
   <p><span style='font-size:24px;'> 🤑 👪 🤕  </span></p>
-  <p><span style='font-size:24px;'> 🪑 🌹 ⏳ </span></p>
+  <p><span style='font-size:24px;'> 💺 🌹 🕐 </span></p>
   <p><span style='font-size:24px;'> 🧸 ❤️ ✈️  </span></p>
 
     <p> </p>
