--- a/namjoon4.html
+++ b/namjoon4.html
@@ -12,7 +12,7 @@
     <p> </p>
     <p>Youth can be both beautiful and painful</p>
 <p>Even so, this era is truly grateful </p>
-<p>Some people have find it already</p>
+<p>Some people have found it already</p>
 <p>And some of us are still living it</p>
 <p>You come back to it whenever </p>
 <p>You find youth is never coming back</p>
