--- a/kitty6.html
+++ b/kitty6.html
@@ -2,7 +2,7 @@
 <script language="JavaScript">
 <!--hide
 var password;
-var pass1="it's definitely you"
+var pass1="feather"
 password=prompt('Enter your answer below to view the next part','');
 if (password==pass1)
 alert('Correct answer, click ok to enter.');
