--- a/bts7.html
+++ b/bts7.html
@@ -9,7 +9,7 @@
 <body style ="background-color:#e8daef">
     <h3>Riddle 7</h3>
     <p> </p>
-    <p>Youth is a dangerous games </p>
+    <p>Youth is a dangerous game </p>
 <p>Don't loose sight of yourself and you will learn how to play</p>
 <p>It talks about temptation and growth in seven different ways</p>
 <p>And for the first time, with the solos we learned to relate</p>
