--- a/answerkey.html
+++ b/answerkey.html
@@ -15,24 +15,94 @@
     <p> </p>
     <p><h3>Riddle 1: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">skit: on the starting line</span></p>
+    <p><span style="color:#ddc9f8;">This song is on 2 Cool 4 Skool, hidden track</span></p>
     <p> </p>
     <p><h3>Riddle 1: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">no offense</span></p>
+    <p><span style="color:#ddc9f8;">The answer is N.O., the actual name of N.O. is no offense</span></p>
     <p> </p>
+    <p><h3>Riddle 2: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">thailand</span></p>
+    <p><span style="color:#ddc9f8;"></span>The riddle is referencing Now1, which was shot in Thailand</p>
     <p> </p>
-    <p><h3>Riddle 1: Part 1</h3></p>
+    <p><h3>Riddle 2: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">rwsjf</span></p>
+    <p><span style="color:#ddc9f8;">The answers of the emojis are: Rain, Wake Up, Spine Breaker, Just One Day, and For You</span></p>
     <p> </p>
+    <p><h3>Riddle 3: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">20120606</span></p>
+    <p><span style="color:#ddc9f8;"></span>The riddle references So 4 More, look on the poster to find the date</p>
     <p> </p>
-    <p><h3>Riddle 1: Part 1</h3></p>
+    <p><h3>Riddle 3: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">american hustle life</span></p>
     <p> </p>
+    <p><h3>Riddle 3: Part 3</h3></p>
+    <p><span style="color:#ddc9f8;">danger</span></p>
     <p> </p>
-    <p><h3>Riddle 1: Part 1</h3></p>
+    <p><h3>Riddle 4</h3></p>
+    <p><span style="color:#ddc9f8;">the most beautiful momentin life</span></p>
     <p> </p>
+    <p><h3>Riddle 5: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">music show win</span></p>
     <p> </p>
-    <p><h3>Riddle 1: Part 1</h3></p>
-    <p>You're welcome to go into main chat for some hints...be careful if they're tricks hehe</p>
-    <p>If you think you got the right answer but it's not working, feel free to tag @Nat @Cyn @Devi for help in main chat</p>
-
-    
+    <p><h3>Riddle 5: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">9</span></p>
+    <p> </p>
+    <p><h3>Riddle 6: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">feather</span></p>
+    <p><span style="color:#ddc9f8;">the riddle references it's defintely you, the cover picture shows Taehyung with a feather under his nose</span></p>
+    <p> </p>
+    <p><h3>Riddle 6: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">fake love</span></p>
+    <p> </p>
+    <p><h3>Riddle 7</h3></p>
+    <p><span style="color:#ddc9f8;">wings</span></p>
+    <p> </p>
+    <p><h3>Riddle 8: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">change</span></p>
+    <p> </p>
+    <p><h3>Riddle 8: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">green</span></p>
+    <p><span style="color:#ddc9f8;">the video referenced is Blood Sweat and Tears, Japanese version</span></p>
+    <p> </p>
+    <p><h3>Riddle 9</h3></p>
+    <p><span style="color:#ddc9f8;">billboard music award</span></p>
+    <p> </p>
+    <p><h3>Riddle 10: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">tear</span></p>
+    <p> </p>
+    <p><h3>Riddle 10: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">300</span></p>
+    <p><span style="color:#ddc9f8;">This references Burn The Stage which is filmed over 300 days</span></p>
+    <p> </p>
+    <p><h3>Riddle 11: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">ddaeng</span></p>
+    <p> </p>
+    <p><h3>Riddle 11: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">waste it on me</span></p>
+    <p> </p>
+    <p><h3>Riddle 11: Part 3</h3></p>
+    <p><span style="color:#ddc9f8;">15:00</span></p>
+    <p><span style="color:#ddc9f8;">Last year BTS did a "List of Happiness" for Festa, Jin wrote waking up at 3PM</span></p>
+    <p> </p>
+    <p><h3>Riddle 12: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">https://twitter.com/BTS_twt/status/1137775053993533440?s=19</span></p>
+    <p> </p>
+    <p><h3>Riddle 12: Part 2</h3>20190210</p>
+    <p><span style="color:#ddc9f8;"></span></p>
+    <p> </p>
+    <p><h3>Riddle 13: Part 1</h3></p>
+    <p><span style="color:#ddc9f8;">bts world</span></p>
+    <p> </p>
+    <p><h3>Riddle 13: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">p5</span></p>
+    <p><span style="color:#ddc9f8;">On We are Bulletprrof:The Eternal, the scene referencing I Need U shows P5 on the wall</span></p>
+    <p> </p>
+    <p><h3>Last Challenge</h3></p>
+    <p><span style="color:#ddc9f8;">The Reason We Shine Is Because You Give Us Light. We Purple You</span></p>
+    <p> </p>
+<p> </p>
+<p>If you have any question or anything feel free to ask @Nat, @Cyn, or @Devi. We hope you had fun playing this!</p>
     </body>
 
 </html>
