--- a/answerkey.html
+++ b/answerkey.html
@@ -23,7 +23,7 @@
     <p> </p>
     <p><h3>Riddle 2: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">thailand</span></p>
-    <p><span style="color:#ddc9f8;"></span>The riddle is referencing Now1, which was shot in Thailand</p>
+    <p><span style="color:#ddc9f8;">The riddle is referencing Now1, which was shot in Thailand</span></p>
     <p> </p>
     <p><h3>Riddle 2: Part 2</h3></p>
     <p><span style="color:#ddc9f8;">rwsjf</span></p>
@@ -31,7 +31,7 @@
     <p> </p>
     <p><h3>Riddle 3: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">20120606</span></p>
-    <p><span style="color:#ddc9f8;"></span>The riddle references So 4 More, look on the poster to find the date</p>
+    <p><span style="color:#ddc9f8;">The riddle references So 4 More, look on the poster to find the date</span></p>
     <p> </p>
     <p><h3>Riddle 3: Part 2</h3></p>
     <p><span style="color:#ddc9f8;">american hustle life</span></p>
@@ -88,8 +88,8 @@
     <p><h3>Riddle 12: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">https://twitter.com/BTS_twt/status/1137775053993533440?s=19</span></p>
     <p> </p>
-    <p><h3>Riddle 12: Part 2</h3>20190210</p>
-    <p><span style="color:#ddc9f8;"></span></p>
+    <p><h3>Riddle 12: Part 2</h3></p>
+    <p><span style="color:#ddc9f8;">20190210</span></p>
     <p> </p>
     <p><h3>Riddle 13: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">bts world</span></p>
@@ -102,7 +102,9 @@
     <p><span style="color:#ddc9f8;">The Reason We Shine Is Because You Give Us Light. We Purple You</span></p>
     <p> </p>
 <p> </p>
+<fieldset>
 <p>If you have any question or anything feel free to ask @Nat, @Cyn, or @Devi. We hope you had fun playing this!</p>
+</fieldset>
     </body>
 
 </html>
