--- a/answerkey.html
+++ b/answerkey.html
@@ -90,6 +90,7 @@
     <p> </p>
     <p><h3>Riddle 12: Part 2</h3></p>
     <p><span style="color:#ddc9f8;">20190210</span></p>
+    <p><span style="color:#ddc9f8;">The riddle is referencing Grammy's when they presented, which was dated on 20190210</span></p>
     <p> </p>
     <p><h3>Riddle 13: Part 1</h3></p>
     <p><span style="color:#ddc9f8;">bts world</span></p>
